--- a/app/views/task/index.html.erb
+++ b/app/views/task/index.html.erb
@@ -45,7 +45,7 @@
           <li>
         <div class="task-card mdl-card mdl-shadow--2dp">
 
-          <div class="mdl-card__title" style="background-image: url(''); min-height: 200px; background-size: 100%; background-repeat: no-repeat; background-position: center; opacity: 0.8;position: relative; padding: 0;">
+          <div class="mdl-card__title" style="background-image: url('<%= task.title_image.url %>'); min-height: 200px; background-size: 100%; background-repeat: no-repeat; background-position: center; opacity: 0.8;position: relative; padding: 0;">
             <div class="task-name">
               <h2 class="mdl-card__title-text f14">Задание №<%= task.id%>, <%= task.title%></h2>
             </div>
