Добавлена возможность восстановления пароля

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,17 @@
-<p>Hello <%= @resource.email %>!</p>
+<style>
+  .wrapper{
+    width: 100%;
+    height: 150px;
+  }
+</style>
+<% @account = Account.find_by_email(@resource.email) %>
+<div class="wrapper">
+<h3>Здравствуйте, <%= @account.login %>!</h3><br>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Вы запросили смену пароля. Чтобы сделать это, перейдите по ссылке ниже.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+  <p>Если вы ничего не запрашивали, то просто проигнорируйте это сообщение. </p>
+  <p>Ваш пароль не изменится до тех пор, пока вы не перейдете по ссылке и не измените его.</p>
+</div>
