--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,13 @@
-<p>Hello <%= @resource.email %>!</p>
+<style>
+  .wrapper{
+    width: 100%;
+    height: 150px;
+  }
+</style>
+<% @account = Account.find_by_email(@resource.email) %>
+<div class="wrapper">
+  <h3>Здравствуйте, <%= @account.login %>!</h3><br>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+  <p>Ваш пароль был успешно изменён.</p>
+</div>
+
