Добавлена возможность восстановления пароля

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -10,6 +10,11 @@
 
 <p>Вы запросили смену пароля. Чтобы сделать это, перейдите по ссылке ниже.</p>
 
+  <% if @account.confirmation_token == nil %>
+      <h4 style="color: #F44336;">ВНИМАНИЕ!</h4>
+      <p style="color: #F44336;">Вы не подтвердили свой email адрес, сделайте это, прежде чем менять пароль. Для подтверждения, перейдите по этой ссылке -> <%= link_to 'ПОДТВЕРДИТЬ EMAIL', account_confirmation_path %></p>
+  <% end %>
+
 <%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
 
   <p>Если вы ничего не запрашивали, то просто проигнорируйте это сообщение. </p>
