Добавлена возможность восстановления пароля

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -12,7 +12,7 @@
 
   <% if @account.confirmation_token == nil %>
       <h4 style="color: #F44336;">ВНИМАНИЕ!</h4>
-      <p style="color: #F44336;">Вы не подтвердили свой email адрес, сделайте это, прежде чем менять пароль. Для подтверждения, перейдите по этой ссылке -> <%= link_to 'ПОДТВЕРДИТЬ EMAIL', account_confirmation_path %></p>
+      <p style="color: #F44336;">Вы не подтвердили свой email адрес, сделайте это, прежде чем менять пароль. Для подтверждения, перейдите по этой ссылке -> <%= link_to 'ПОДТВЕРДИТЬ EMAIL', new_confirmation_path(resource_name) %></p>
   <% end %>
 
 <%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
