Добавлена возможность восстановления пароля

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -10,10 +10,10 @@
 
 <p>Вы запросили смену пароля. Чтобы сделать это, перейдите по ссылке ниже.</p>
 
-  <% if @account.confirmation_token == nil %>
+  <% ##if @account.confirmation_token == nil %>
       <h4 style="color: #F44336;">ВНИМАНИЕ!</h4>
-      <p style="color: #F44336;">Вы не подтвердили свой email адрес, сделайте это, прежде чем менять пароль. Для подтверждения, перейдите по этой ссылке -> <%= link_to 'ПОДТВЕРДИТЬ EMAIL', new_confirmation_path(resource_name) %></p>
-  <% end %>
+      <p style="color: #F44336;">Вы не подтвердили свой email адрес, сделайте это, прежде чем менять пароль. Для подтверждения, перейдите по этой ссылке -> <%= link_to 'ПОДТВЕРДИТЬ EMAIL',  new_account_confirmation_url  %></p>
+  <% ##end %>
 
 <%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
 
