--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,14 +1,50 @@
-<h2>Подтверждение почты</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Отправить ссылку на подтверждение" %>
-  </div>
+<% content_for :head do %>
+    <title>Аккаунт - AlterLand</title>
+    <%= stylesheet_link_tag "devise.css" %>
+    <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons" %>
 <% end %>
+
+<div class = "wrapper">
+
+  <div class = "alterland-header-bar centered">
+    <div class = "header content clearfix">
+      <div class="logo"></div>
+    </div>
+  </div>
+
+  <div class = "main content clearfix">
+    <div class="banner">
+      <h2>
+        Подтверждение почты
+      </h2>
+    </div>
+    <div class = "session-card mdl-card mdl-shadow--2dp">
+      <div class="session-card mdl-card__title mdl-shadow--2dp">
+        <h2 class="session-card mdl-card__title-text">Какой Email вы хотите подтвердить</h2>
+      </div>
+      <div class = "main-form">
+
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.email_field :email, autofocus: true, class: 'mdl-textfield__input', id: 'email', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+                <label class="mdl-textfield__label" for="email">Email</label>
+                <%= errors_for @account, :email %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div style="text-align: center">
+                <%= f.submit "Отправить подтверждение", { :class=>"mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"} %>
+              </div>
+            </div>
+        <% end %>
+      </div>
+      <div class="mdl-card__menu">
+        <%= link_to new_account_session_path, class: "mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" do %>
+            <i class="material-icons" style="color: #E0E0E0">&#xE5C4;</i>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
