--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,23 +1,61 @@
-<h2>Смена пароля</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Сменить пароль" %>
-  </div>
+<% content_for :head do %>
+    <title>Аккаунт - AlterLand</title>
+    <%= stylesheet_link_tag "devise.css" %>
+    <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons" %>
 <% end %>
+
+<div class = "wrapper">
+
+  <div class = "alterland-header-bar centered">
+    <div class = "header content clearfix">
+      <div class="logo"></div>
+    </div>
+  </div>
+
+  <div class = "main content clearfix">
+    <div class="banner">
+      <h2>
+        Восстановление пароля
+      </h2>
+    </div>
+    <div class = "session-card mdl-card mdl-shadow--2dp">
+      <div class="session-card mdl-card__title mdl-shadow--2dp">
+        <h2 class="session-card mdl-card__title-text">Придумайте новый пароль</h2>
+      </div>
+      <div class = "main-form">
+
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+            <%= f.hidden_field :reset_password_token %>
+
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.password_field :password, autofocus: true, autocomplete: "off",  class: 'mdl-textfield__input', id: 'pass' %>
+                <label class="mdl-textfield__label" for="pass">Пароль (не менее <%= @minimum_password_length %> символов)</label>
+                <%= errors_for @account, :password %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "off",  class: 'mdl-textfield__input', id: 'repass' %>
+                <label class="mdl-textfield__label" for="repass">Повторите пароль</label>
+                <%= errors_for @account, :password_confirmation %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div style="text-align: center">
+                <%= f.submit "Сменить пароль", { :class=>"mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"} %>
+              </div>
+            </div>
+        <% end %>
+
+      </div>
+      <div class="mdl-card__menu">
+        <%= link_to new_account_session_path, class: "mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" do %>
+            <i class="material-icons" style="color: #E0E0E0">&#xE5C4;</i>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
