--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -25,12 +25,11 @@
       <div class = "main-form">
 
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-          <%= devise_error_messages! %>
-
             <div class="group">
               <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                 <%= f.email_field :email ,autofocus: true , class: 'mdl-textfield__input', id: 'email'%>
                 <label class="mdl-textfield__label" for="email">Email</label>
+                <%= errors_for @account, :email %>
               </div>
             </div>
 
@@ -49,5 +48,4 @@
       </div>
     </div>
   </div>
-
 </div>
