--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,74 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-    <div class="field">
-      <%= f.label :login %><br />
-      <%= f.text_field :login %>
-    </div>
-
-    <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+<% content_for :head do %>
+    <title>Аккаунт - AlterLand</title>
+    <%= stylesheet_link_tag "devise.css" %>
+    <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class = "wrapper">
+
+  <div class = "alterland-header-bar centered">
+    <div class = "header content clearfix">
+      <div class="logo"></div>
+    </div>
+  </div>
+
+  <div class = "main content clearfix">
+    <div class="banner">
+      <h2>
+        Регистрация
+      </h2>
+    </div>
+    <div class = "session-card mdl-card mdl-shadow--2dp">
+      <div class="session-card mdl-card__title mdl-shadow--2dp">
+        <h2 class="session-card mdl-card__title-text"></h2>
+      </div>
+      <div class = "main-form">
+
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.text_field :login, autofocus: true, class: 'mdl-textfield__input', id: 'login' %>
+                <label class="mdl-textfield__label" for="login">Логин</label>
+                <%= errors_for @account, :login %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.email_field :email, autofocus: true, class: 'mdl-textfield__input', id: 'email', value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+                <label class="mdl-textfield__label" for="email">Email</label>
+                <%= errors_for @account, :email %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.password_field :password, autofocus: true, autocomplete: "off",  class: 'mdl-textfield__input', id: 'pass' %>
+                <label class="mdl-textfield__label" for="pass">Пароль (не менее <%= @minimum_password_length %> символов)</label>
+                <%= errors_for @account, :password %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "off",  class: 'mdl-textfield__input', id: 'repass' %>
+                <label class="mdl-textfield__label" for="repass">Повторите пароль</label>
+                <%= errors_for @account, :password_confirmation %>
+              </div>
+            </div>
+
+            <div class="group">
+              <div style="text-align: center">
+                <%= f.submit "Готово", { :class=>"mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"} %>
+              </div>
+            </div>
+        <% end %>
+      </div>
+      <div class="mdl-card__menu">
+        <%= link_to new_account_session_path, class: "mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect" do %>
+            <i class="material-icons" style="color: #E0E0E0">&#xE5C4;</i>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
